--- a/src/sass/header.scss
+++ b/src/sass/header.scss
@@ -86,7 +86,7 @@
   background: #e5e5e5;
 }
 
-.comm-tit {
+.comm-title {
   font-family: 'Playfair Display', serif;
   font-weight: bold;
   font-size: 40px;
@@ -94,14 +94,22 @@
   text-align: center;
   letter-spacing: 0.05em;
   text-transform: uppercase;
+  padding: 140px 0 50px;
 }
 
 .comm-list {
   display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+  position: relative;
 }
 
 .comm-list-item {
   width: 175px;
+}
+
+.item-img {
+  margin: auto;
 }
 
 .item-text {
@@ -111,14 +119,49 @@
   font-size: 28px;
   line-height: 33px;
   text-align: center;
+  margin-bottom: 137px;
 }
+
+.section-form {
+  position: relative;
+  overflow: hidden;
+}
+
+.section-form .rgba {
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  background: url(../images/bgg.jpg);
+  background-size: cover;
+  position: absolute;
+}
+
+.section-form .container {
+  position: relative;
+  z-index: 2;
+}
+
+.communication-text {
+  position: relative;
+  width: 672px;
+  height: 265px;
+  background-color: #000;
+  color: #fff;
+  z-index: 1000;
+  font-family: 'Roboto', sans-serif;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 23px;
+  padding: 64px 62px;
+  margin: 0 0 -180px auto;
+}
+
 
 //-----SECTION-FORM----\\
 
 .section-form {
-  background: linear-gradient(rgba(32, 23, 89, 0.38), rgba(32, 23, 89, 0.38)),
-    url(../images/DSC04436.png);
-  background-size: cover;
   padding: 19px 0 143px;
   color: #fff;
   text-align: center;
@@ -170,7 +213,7 @@
 //------GOOGLE-NAV-------\\
 
 .iframe {
-  width: 100%;
+  width: 100% !important;
   display: block;
 }
 
