--- a/src/sass/header.scss
+++ b/src/sass/header.scss
@@ -641,3 +641,87 @@ input{
     }
   }
 }
+
+
+.gallery{
+  overflow: hidden;
+  position: relative;
+}
+
+.gallery::before{
+  content: "";
+  display: block;
+  width: calc(15% + 50px);
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: 1;
+  background: linear-gradient(90deg,rgba(255,255,255,.81) 61.66%,rgba(255,255,255,.21) 100%);
+}
+
+.gallery::after{
+  content: "";
+  display: block;
+  width: calc(15% + 50px);
+  height: 100%;
+  position: absolute;
+  right: 0;
+  top: 0;
+  z-index: 1;
+  background: linear-gradient(90deg,rgba(255,255,255,.21) 61.66%,rgba(255,255,255,.81) 100%)
+}
+
+
+.gallery .container{
+  position: absolute;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  margin: auto;
+  display: flex;
+  align-items: center;
+  z-index: 99;
+}
+
+.gallery__nav{
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+}
+
+.gallery__nav img{
+  cursor: pointer;
+  user-select: none;
+  outline: none;
+}
+
+.gallery__nav .left{
+  transform: rotate(-180deg);
+}
+
+.gallery__list{
+  display: flex;
+  align-items: center;
+  flex-flow: row;
+  position: relative;
+  width: 100%;
+  left: -40%;
+}
+
+.gallery_title{
+  text-align: center;
+  margin: 70px 0;
+}
+.gallery__item{
+  padding: 0px 50px;
+  height: 511px;
+  min-width: 60%;
+}
+
+.gallery__item img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
